# rust-react

backend/: Cargo.toml  Procfile  README.md  rust-toolchain.toml
backend/data/: user.json
backend/migrations/2022-07-04-070023_create_users/: up.sql
backend/migrations/2022-07-09-064355_create_products/: up.sql
backend/src/: bin.rs  error.rs  header.rs  lib.rs  model.rs  schema.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  MultipleInputs.js  login.jsx
frontend/src/components/Mainpage/Navbar/: Button .js  Button.css  Navbar.css  Navbar.js
frontend/src/components/login page/: App.css  MultipleInputs.js  login.jsx
frontend/src/components/pages/: CarouselContainer.jsx  Footer.css  Footer.jsx  HomePage.jsx  MainSection.jsx  Products.jsx
